// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Toolbar instance with center justification 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  justify={2}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Toolbar"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={2}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "18px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          bottom=""
          className="ui-toolbar-element"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage=""
          focus={false}
          height=""
          iconName="car"
          iconStyle=""
          id=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Button"
          onClick={[Function]}
          padding=""
          selected={false}
          sizing="small"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test creation of a Toolbar instance with left justification 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  justify={0}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Toolbar"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={0}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "18px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          bottom=""
          className="ui-toolbar-element"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage=""
          focus={false}
          height=""
          iconName="car"
          iconStyle=""
          id=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Button"
          onClick={[Function]}
          padding=""
          selected={false}
          sizing="small"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test creation of a Toolbar instance with right justification 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  justify={1}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Toolbar"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={1}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "18px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          bottom=""
          className="ui-toolbar-element"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage=""
          focus={false}
          height=""
          iconName="car"
          iconStyle=""
          id=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Button"
          onClick={[Function]}
          padding=""
          selected={false}
          sizing="small"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test disabling of a Toolbar instance 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  justify={0}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Toolbar"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={0}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "24px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          bottom=""
          className="ui-toolbar-element"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={true}
          err={null}
          errorMessage=""
          focus={false}
          height=""
          iconName="car"
          iconStyle=""
          id=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Button"
          onClick={[Function]}
          padding=""
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test making the Toolbar invisible 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  justify={0}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Toolbar"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={false}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={0}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "24px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          bottom=""
          className="ui-toolbar-element"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage=""
          focus={false}
          height=""
          iconName="car"
          iconStyle=""
          id=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Button"
          onClick={[Function]}
          padding=""
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={false}
          width=""
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test retrieval of Toolbar props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "id": "",
  "justify": 0,
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Toolbar",
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
